Sun Jul 31 21:09:04 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (node_name.inc): Use $(Q) for consistency.

	* Makefile.in (INSNS): ditto.

Sun Jul 31 20:39:12 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (ECHO1): nmake does not allow parenthesis in make variable
	  replacement.

Sun Jul 31 20:21:36 2011  "Yuki Sonoda (Yugui)"  <yugui@yugui.jp>

	* common.mk (ECHO1): ":" in a make variable replacement cause a syntax
	  error with /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

	* configure.in (NULLCMD): new check.

	* Makefile.in (NULLCMD): Reflects checking in configure.

	* win32/Makefile.sub (NULLCMD): new assignment.

Sun Jul 31 11:31:07 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* backport r32768 from trunk.

	* vm.c: check if cfp is valid. [Bug #5083] [ruby-dev:44208]

Sat Jul 31 01:23:45 2011  Kenta Murata  <mrkn@mrkn.jp>

	* backport r32762 from trunk.

	* test/bigdecimal/test_bigdecimal.rb (test_version): removed.

Sat Jul 30 23:51:44 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (cbrt): should return a real number if possible.

Sat Jul 30 23:48:04 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: an issue that is same as  [ruby-dev:44071].
	* ext/date/date_strftime.c: identical to [ruby-dev:44112].

Sat Jul 30 23:19:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/default_gems: separate from tool/rbinstall.rb.

Sat Jul 30 23:14:44 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_each_byte): rbuf can be refreshed during yield.
	  [Bug #5119]

Sat Jul 30 22:35:50 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* strftime.c (NEEDS): avoid SEGV due to integer overflow in
	  sparc-solaris2.10 and i686-linux.  fix [Bug #4456] [ruby-dev:43284]

Sat Jul 30 14:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* backport r32754 from trunk.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_version): version 1.1.0.

	* ext/bigdecimal/bigdecimal.gemspec: turn into a default gem.
