@@ -1,3 +1,10 @@
+Sun Jul 31 21:16:02 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* complex.c (f_signbit): gcc4 on Solaris DOES have signbit but does
+	  not have it on header.
+
+	* math.c: ditto.
+
 Sun Jul 31 21:09:04 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* common.mk (node_name.inc): Use $(Q) for consistency.
